compiler/tests/should-fail/HostSetClash.via
/* NameClashError */

host alice

fun main() {
    val x: int@Local(host = {alice, alice}) = 0;
}
